# keytar-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  USAGE.md  configure-cross.sh  index.d.ts  index.js  package-lock.json  package.json  test.js  traeok-keytar-rs-0.0.0c.tgz
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.mjs
cli/: index.js  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-ia32-gnu/: README.md  package.json
npm/linux-s390x-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
prebuilds/: index.d.ts
scripts/: platformCheck.js  prebuildify.sh
src/: lib.rs  main.rs  utils.rs  workers.rs
src/keytar/: error.rs  headless_unix.rs  mac.rs  mod.rs  unix.rs  win.rs
src/os/: error.rs
src/providers/: keyctl.rs  mod.rs
src/providers/keyctl/: mod.rs  types.rs
vscode/: README.md  package-lock.json  package.json
vscode-remote/: package.json
vscode-remote/src/: extension.ts
vscode/src/: extension.ts
