[package]
edition = "2021"
name = "traeok_keytar-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = {version = "2.10.1", default-features = false, features = ["napi4"]}
napi-derive = "2.9.1"

[features]
default = []

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
]
version = "0.43.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.7.0"

[target.'cfg(any(target_os = "freebsd", target_os = "linux"))'.dependencies]
nc = { version = "0.8" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
