[package]
edition = "2021"
name = "traeok_keytar-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = {version = "2.13.2", default-features = false, features = ["napi4"]}
napi-derive = "2.13.0"
thiserror = "1.0.38"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_WindowsProgramming",
]
version = "0.48.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9.1"

[target.'cfg(any(target_os = "freebsd", target_os = "linux"))'.dependencies]
glib = "0.17.10"
gio = "0.17.10"
libsecret = { version = "0.3.0", features = ["v0_19"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = "z"  # Optimize for size.